--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,6 @@ dependencies {
     testCompile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.4.1'
+    testRuntime group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.1.0.Final'
+
 }
